--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   riverpod_annotation: ^2.3.5
   sqflite: ^2.3.3+1
   go_router: ^14.2.0
+  gif: ^2.3.0
+  another_flushbar: ^1.12.30
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +76,8 @@ flutter:
 
   assets:
     - assets/fonts/
+    - assets/images/ToDoList.gif
+    - assets/images/Mobile_Note.gif
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
