--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  chips_choice: ^3.0.1
   flutter_riverpod: ^2.5.1
+  #chips_choice
   riverpod_annotation: ^2.3.5
   sqflite: ^2.3.3+1
   go_router: ^14.2.0
